[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/battle/Hero.gd" type="Script" id=1]
[ext_resource path="res://scenes/battle/PauseControl.gd" type="Script" id=2]
[ext_resource path="res://scenes/battle/Timeline.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/timeline/red_dot.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/enemies/RedRect.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/battle/Hand.gd" type="Script" id=7]
[ext_resource path="res://scenes/battle/Battle.gd" type="Script" id=8]
[ext_resource path="res://scenes/battle/Deck.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 6 )

[node name="Battle" type="Node2D"]
script = ExtResource( 8 )

[node name="HUD" type="Node2D" parent="."]

[node name="Timeline" type="ColorRect" parent="HUD"]
margin_left = 258.0
margin_top = 700.0
margin_right = 1658.0
margin_bottom = 720.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyAvatar" type="Sprite" parent="HUD/Timeline"]
visible = false
texture = ExtResource( 4 )

[node name="GameOver" type="Label" parent="HUD"]
visible = false
margin_left = 672.0
margin_top = 382.0
margin_right = 1263.0
margin_bottom = 502.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="Node2D" parent="."]
position = Vector2( 960, 930 )
script = ExtResource( 7 )

[node name="Deck" type="Node" parent="Hand"]
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="Hand"]
autostart = true

[node name="Enemy" type="Node2D" parent="."]
position = Vector2( 1516, 434 )

[node name="RedRect" parent="Enemy" instance=ExtResource( 5 )]

[node name="Hero" type="Node2D" parent="."]
position = Vector2( 352, 434 )
script = ExtResource( 1 )

[node name="DefendTimer" type="Timer" parent="Hero"]
one_shot = true

[node name="PauseControl" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 2 )

[connection signal="timeout" from="Hand/Timer" to="Hand" method="_on_Timer_timeout"]
[connection signal="timeout" from="Hero/DefendTimer" to="Hero" method="_on_defend_timeout"]
